--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Bookshop</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <h1>University Bookshop</h1>
